--- a/mean-app/src/app/posts/post-create/post-create.component.html
+++ b/mean-app/src/app/posts/post-create/post-create.component.html
@@ -1,29 +1,26 @@
 <mat-card>
-    <form (submit)="onAddPost(postForm)" #postForm="ngForm">
+    <mat-spinner *ngIf="isLoading"></mat-spinner>
+    <form [formGroup]="form" (submit)="onSavePost()" *ngIf="!isLoading">
         <mat-form-field>
             <input 
                 matInput 
                 type="text" 
-                name="title" 
-                ngModel
-                required
-                minlength="3"
-                placeholder="Post Title"
-                #title="ngModel">
-            <mat-error *ngIf="title.invalid">Please enter a post title</mat-error>
+                formControlName="title"
+                placeholder="Post Title">
+            <mat-error *ngIf="form.get('title').invalid">Please enter a post title</mat-error>
         </mat-form-field>
+        <div>
+            <button mat-stroked-button type="button" (click)="filePicker.click()">Pick Image</button>
+            <input type="file" #filePicker (change)="onImagePicked($event)">
+        </div>
         <mat-form-field>
-            <textarea 
+            <textarea
                 matInput 
-                rows="6" 
-                name="content" 
-                ngModel
-                required
-                placeholder="Post Content"
-                #content="ngModel"></textarea>
-            <mat-error *ngIf="content.invalid">Please enter a post content</mat-error>
+                rows="4"
+                formControlName="content"
+                placeholder="Post Content"></textarea>
+            <mat-error *ngIf="form.get('content').invalid">Please enter a post content</mat-error>
         </mat-form-field>
         <button mat-raised-button color="accent">Save</button>
     </form>
 </mat-card>
-
